--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ dev-dependencies = [
 ]
 
 [tool.uv.workspace]
-members = ["shared_lib", "bots/*"]
+members = ["bots/*"]
 
 [tool.ruff]
 line-length = 88
