--- a/.env.example
+++ b/.env.example
@@ -1,36 +1,19 @@
-# Discord Bot Framework Environment Variables
+## Copy to .env and fill in your bot tokens
 
-# Global settings (applies to all bots unless overridden)
-DISCORD_TOKEN=your_default_discord_token_here
-COMMAND_PREFIX=!
+# Required tokens
+CLIPPY_DISCORD_TOKEN=
+MUSIC_DISCORD_TOKEN=
+MTG_DISCORD_TOKEN=
+
+# Optional (common)
 LOG_LEVEL=info
-JSON_LOGGING=false
 DEBUG=false
 
-# Guild ID (can be overridden per bot)
-GUILD_ID=your_guild_id_for_testing
+# Music bot (optional overrides)
+MUSIC_MAX_QUEUE_SIZE=100
+MUSIC_INACTIVITY_TIMEOUT=300
+MUSIC_VOLUME_LEVEL=0.5
 
-# Timeout configurations
-SHUTDOWN_TIMEOUT=30s
-REQUEST_TIMEOUT=30s
-MAX_RETRIES=3
-
-# Clippy Bot Configuration
-CLIPPY_DISCORD_TOKEN=your_clippy_bot_token_here
-CLIPPY_GUILD_ID=your_guild_id_for_testing
-RANDOM_RESPONSES=true
-RANDOM_INTERVAL=45m
-RANDOM_MESSAGE_DELAY=3s
-
-# Music Bot Configuration  
-MUSIC_DISCORD_TOKEN=your_music_bot_token_here
-MUSIC_GUILD_ID=your_guild_id_for_testing
-MUSIC_DATABASE_URL=music.db
-MAX_QUEUE_SIZE=100
-INACTIVITY_TIMEOUT=5m
-VOLUME_LEVEL=0.5
-
-# MTG Card Bot Configuration
-# MTG bot will use DISCORD_TOKEN if no specific token is provided
-CACHE_TTL=1h
-CACHE_SIZE=1000
+# MTG bot (optional overrides)
+MTG_CACHE_TTL=3600
+MTG_CACHE_SIZE=1000
